--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Welcome to The Tea Cozy!</h1>
+    <p>We are a cozy little tea shop located in the heart of the city.</p>
   </body>
 </html>
