Complete html and css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Tea Cozy</title>
-  </head>
-  <body>
-    <h1>Welcome to The Tea Cozy!</h1>
-    <p>We are a cozy little tea shop located in the heart of the city.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tea Cozy</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <header>
+    <div class="nav-container">
+      <h1 class="logo">Tea Cozy</h1>
+      <nav>
+        <a href="#mission">Mission</a>
+        <a href="#featured">Featured Tea</a>
+        <a href="#locations">Locations</a>
+      </nav>
+    </div>
+  </header>
+
+  <section id="mission" class="hero-section">
+    <div class="hero-content">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+  </section>
+
+  <section id="featured" class="featured-section">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy?</h4>
+    <div class="grid teas">
+      <!-- Tea cards go here -->
+    </div>
+  </section>
+
+  <section id="locations" class="locations-section">
+    <h2>Locations</h2>
+    <div class="grid locations">
+      <!-- Location cards go here -->
+    </div>
+  </section>
+
+  <footer>
+    <h2>The Tea Cozy</h2>
+    <h5>contact@theteacozy.com</h5>
+    <h5>917-555-8904</h5>
+    <p>&copy; The Tea Cozy 2024</p>
+  </footer>
+
+</body>
 </html>
