--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <header>
     <div class="nav-container">
-      <h1 class="logo">Tea Cozy</h1>
+      <h1 class="logo">
+        <img src="images/img-tea-cozy-logo.png" alt="Tea Cozy Logo" height="50">
+      </h1>
       <nav>
         <a href="#mission">Mission</a>
         <a href="#featured">Featured Tea</a>
@@ -30,14 +32,50 @@
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cozy?</h4>
     <div class="grid teas">
-      <!-- Tea cards go here -->
+      <div class="tea-card">
+        <img src="images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+        <p>Fall Berry Blitz Tea</p>
+      </div>
+      <div class="tea-card">
+        <img src="images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+        <p>Spiced Rum Tea</p>
+      </div>
+      <div class="tea-card">
+        <img src="images/img-donut.jpg" alt="Seasonal Donuts">
+        <p>Seasonal Donuts</p>
+      </div>
+      <div class="tea-card">
+        <img src="images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+        <p>Myrtle Ave Tea</p>
+      </div>
+      <div class="tea-card">
+        <img src="images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+        <p>Bedford Bizarre Tea</p>
+      </div>
     </div>
   </section>
 
   <section id="locations" class="locations-section">
     <h2>Locations</h2>
     <div class="grid locations">
-      <!-- Location cards go here -->
+      <div class="location-card">
+        <h3>Downtown</h3>
+        <p>384 West 4th St</p>
+        <p>Suite 108</p>
+        <p>Portland, Maine</p>
+      </div>
+      <div class="location-card">
+        <h3>East Bayside</h3>
+        <p>3433 Phisherman's Avenue</p>
+        <p>(Northwest Corner)</p>
+        <p>Portland, Maine</p>
+      </div>
+      <div class="location-card">
+        <h3>Oakdale</h3>
+        <p>515 Crescent Avenue</p>
+        <p>Second Floor</p>
+        <p>Portland, Maine</p>
+      </div>
     </div>
   </section>
 
